--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -71,6 +71,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="aboutDropdown">
                 <a class="dropdown-item" href="/about/">What We Do</a>
+                <a class="dropdown-item" href="/stories/">Stories</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item text-uppercase disabled" href="#">About Apache</a>
                 <a class="dropdown-item" href="https://www.apache.org/">The Apache Software Foundation</a>
