uglyURLs back on, makes for more sensible and prettier! url schemes. Re-org some content

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -86,6 +86,11 @@
                 Events
               </a>
               <div class="dropdown-menu" aria-labelledby="eventDropdown">
+                <a class="dropdown-item text-uppercase disabled" href="#">TAC Supported Events</a>
+                <a class="dropdown-item" href="/events/current.html">Current Events</a>
+                <a class="dropdown-item" href="/events/previous.html">Previous Events</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item text-uppercase disabled" href="#">Related External Links</a>
                 <a class="dropdown-item" href="https://apachecon.com/">ApacheCon - The official event of the ASF</a>
                 <a class="dropdown-item" href="/calendars/">Major Apache-related Events</a>
                 <a class="dropdown-item" href="https://www.apache.org/events/meetups.html">Upcoming Apache-related meetups</a>
