--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -68,9 +68,10 @@
                 <a class="dropdown-item text-uppercase disabled" href="#">About Apache</a>
                 <a class="dropdown-item" href="https://www.apache.org/">The Apache Software Foundation</a>
                 <a class="dropdown-item" href="https://www.apache.org/foundation/sponsorship">Sponsor Apache</a>
-                <a class="dropdown-item" href="https://www.apache.org/foundation/thanks">Thanks to our Sponsors</a>
+                <a class="dropdown-item" href="https://www.apache.org/foundation/thanks">Thanks</a>
                 <a class="dropdown-item" href="https://www.apache.org/licenses">License</a>
                 <a class="dropdown-item" href="https://www.apache.org/security">Security</a>
+                <a class="dropdown-item" href="https://privacy.apache.org/policies/privacy-policy-public.html">Privacy</a>
               </div>
             </li>
             <li class="nav-item dropdown">
